--- a/DIA 7/style.css
+++ b/DIA 7/style.css
@@ -523,337 +523,255 @@ body{
     color: #f2f2f2;
     font-size: 5vw;
 }
-#contenido{
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    margin: 0 auto;
-    border: red 5px solid;
-    z-index: 2;
-}
-#fondo{
-    background-color: #1e1d2b;
-    position: relative;
-    top: 0px;
-    left: 2px;
-    width: 1920px;
-    height: 1080px;
-    border-style: solid;
-    border-color: #cb5d2a;
-}
 #menulinks{
-    position: relative;
-    top: 58px;
-    width: 4514px;
-    height: 48px;
-    border-radius: 108px;
-    font-size: 65px;
+    margin-top: 25%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 6vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra4;
+    justify-content: space-around;
     color:#efeff0;
-    left: -1947px;
+    margin-left: -10;
 }
 #home2{
-    position: relative;
-    top: 76px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -29%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -547px;
+    margin-left: -10%;
 }
 #about2{
-    position: relative;
-    top: 85px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -549px;
+    margin-left: -10%;
 }
 #linea{
-    top: -217px;
-    left: 150px;
-    position: relative;
+    display: flex;
+    justify-content: space-around;
+    margin-top: -46%;
+    margin-left: -73%;
     color: #ff702a;
-    font-size: 70px;
+    font-size: 4vw;
 }
 #menu2{
-    position: relative;
-    top: -37px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: 14%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -554px;
+    margin-left: -10%;
 }
 #service3{
-    position: relative;
-    top: -35px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -544px;
+    margin-left: -9%;
 }
 #contact2{
-    position: relative;
-    top: -28px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -540px;
+    margin-left: -9%;
 }
 #our2{
-    position: relative;
-    top: -571px;
-    width: 4514px;
-    height: 48px;
-    border-radius: 108px;
-    font-size: 65px;
+    margin-top: -68%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 6vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra4;
+    justify-content: space-around;
     color:#efeff0;
-    left: -1527px;
+    margin-left: 42%;
 }
 #linea2{
-    top: -696px;
-    left: 589px;
-    position: relative;
+    display: flex;
+    justify-content: space-around;
+    margin-top: -36%;
+    margin-left: 11%;
     color: #ff702a;
-    font-size: 70px;
+    font-size: 6vw;
 }
 #web{
-    position: relative;
-    top: -681px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-left: 38%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -59px;
+    margin-top: -3.5%;
 }
 #webd{
-    position: relative;
-    top: -675px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: 14px;
+    margin-left: 44%;
 }
 #marketing{
-    position: relative;
-    top: -664px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -65px;
+    margin-left: 37%;
 }
 #product{
-    position: relative;
-    top: -664px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: 42px;
+    margin-left: 45%;
 }
 #graphic{
-    position: relative;
-    top: -659px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: letra3;
+    justify-content: space-around;
     color: #ffffff;
-    left: -22px;
+    margin-left: 41%;
 }
 #information{
-    position: relative;
-    top: -1201px;
-    width: 4514px;
-    height: 48px;
-    border-radius: 108px;
-    font-size: 65px;
+    margin-top: -68%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 6vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: letra4;
     color:#efeff0;
-    left: -942px;
+    margin-left: 90%;
 }
 #linea3{
-    top: -1326px;
-    left: 1152px;
-    position: relative;
+    display: flex;
+    justify-content: space-around;
+    margin-top: -34%;
+    margin-left: 99%;
     color: #ff702a;
-    font-size: 70px;
+    font-size: 4.5vw;
 }
 #about4{
-    position: relative;
-    top: -1309px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -2%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: letra3;
     color: #ffffff;
-    left: 487px;
+    margin-left: 83%;
 }
 #delivery{
-    position: relative;
-    top: -1303px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: letra3;
     color: #ffffff;
-    left: 607px;
+    margin-left: 92%;
 }
 #privacy{
-    position: relative;
-    top: -1292px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: letra3;
     color: #ffffff;
-    left: 534px;
+    margin-left: 88%;
 }
 #terms{
-    position: relative;
-    top: -1291px;
-    width: 1505px;
-    height: 24px;
-    border-radius: 108px;
-    font-size: 50px;
+    margin-top: -28%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 4.5vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: letra3;
     color: #ffffff;
-    left: 590px;
+    margin-left: 92%;
 }
 #contact3{
-    position: relative;
-    top: -1749px;
-    width: 4514px;
-    height: 48px;
-    border-radius: 108px;
-    font-size: 65px;
+    margin-top: -60%;
+    width: 50vw;
+    height: 30vw;
+    font-size: 6vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: letra4;
     color:#efeff0;
-    left: -546px;
+    margin-left: 150%;
 }
 #linea4{
-    top: -1876px;
-    left: 1579px;
-    position: relative;
+    display: flex;
+    justify-content: space-around;
+    margin-top: -35%;
+    margin-left: 162%;
     color: #ff702a;
-    font-size: 70px;
+    font-size: 5vw;
 }
 #circulo1{
-    width: 74px;
-    height: 63px;
+    display: flex;
+    justify-content: space-around;
+    width: 6vw;
+    height: 6vw;
     background-color: #ff702a;
-    border-radius: 50%;
-    position: relative;
-    top: -1917px;
-    left: 1777px;
+    border-radius: 100vw;
+    margin-top: 4%;
+    margin-left: 185%;
 }
 #circulo2{
-    width: 74px;
-    height: 63px;
+    display: flex;
+    justify-content: space-around;
+    width: 6vw;
+    height: 6vw;
     background-color: #ff702a;
-    border-radius: 50%;
-    position: relative;
-    top: -1993px;
-    left: 1687px;
+    border-radius: 100vw;
+    margin-top: -7%;
+    margin-left: 175%;
 }
 #circulo3{
-    width: 74px;
-    height: 63px;
+    display: flex;
+    justify-content: space-around;
+    width: 6vw;
+    height: 6vw;
     background-color: #ff702a;
-    border-radius: 50%;
-    position: relative;
-    top: -2075px;
-    left: 1601px;
+    border-radius: 100vw;
+    margin-top: -7%;
+    margin-left: 165%;
 }
 #circulo4{
-    width: 74px;
-    height: 63px;
+    display: flex;
+    justify-content: space-around;
+    width: 6vw;
+    height: 6vw;
     background-color: #ff702a;
-    border-radius: 50%;
-    position: relative;
-    top: -2153px;
-    left: 1515px;
+    border-radius: 100vw;
+    margin-top: -7%;
+    margin-left: 155%;
 }
