--- a/DIA 9/style.css
+++ b/DIA 9/style.css
@@ -22,6 +22,7 @@
 }
 #nube{
     position: absolute;
+    z-index: 2;
     top: 20px;
     width: 350px;
     animation: movernube 11s linear infinite;
@@ -35,9 +36,9 @@
 #flor{
     position: absolute;
     top: 270px;
-    left: 260px;
+    left: 280px;
     width: 300px;
-    animation: desaparecer 9s infinite ;
+    animation: desaparecer 12s infinite ;
 }
 @keyframes desaparecer {
     0% {top: 1000px;}
@@ -45,13 +46,13 @@
 #lluvia{
     position: absolute;
     top: 100px;
-    left: 230px;
-    width: 350px;
+    left: 300px;
+    width: 200px;
     animation: lluvia 11s linear infinite;
 }
 @keyframes lluvia {
     0% {top: -20px;}
     100% {top: 300px;}
-    0%{opacity: 1;}
+    0%{opacity: 0;}
     100%{opacity: 2;}
 }
