--- a/DIA 10/style.css
+++ b/DIA 10/style.css
@@ -1,18 +1,182 @@
 
-#contenedor{
-    width: 100vw;
-    height: 100vw;
-    display: grid;
-    grid-template-columns: 20% auto;
+@font-face{
+    font-family: letra1;
+    src: url(letras/HoxtonNorthTrial-Bold-BF63c8981406eaa.otf);
+    font-family: letra2;
+    src: url(letras/HoxtonNorthTrial-Light-BF63c89814351b0.otf);
+    font-family: letra3;
+    src: url(letras/HoxtonNorthTrial-Regular-BF63c89813a9d5a.otf);
 }
-#caja1{
+#contenedor{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     width: 100vw;
-    height: 100vw;
-    background-color: red;
-    grid-column: 1/2;
+    height: 50vw;
+    background-color: black;
+}
+
+#caja1{
+    background-color: #fefefe;
+    width: 14vw;
+    height: 46vw;
+    margin-top: 2%;
+    margin-left: 2.5%;
+}
+#cara{
+    width: 1.5vw;
+    height: 1.5vw;
+    margin-top: 18%;
+    margin-left: 10%;
+}
+#admin{
+    width: 1.5vw;
+    height: 1.5vw;
+    margin-top: -9%;
+    margin-left: 30%;
+    font-family: letra1;
+    font-size: 1.5vw;
+    color: blue;
+
+}
+#cuadro1{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 14%;
+    margin-left: 14%;
+    font-family: letra2;
+    font-size: 1vw;
+    color: white;
+    border-radius: 1vw;
+    background-color: #1567ed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#main{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 14%;
+    margin-left: 13%;
+    font-family: letra2;
+    font-size: 1.4vw;
+    color: #787878;
+}
+#element{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 8%;
+    margin-left: 30%;
+    font-family: letra2;
+    font-size: 1.2vw;
+    color: #101010;
+}
+#figura1{
+    width: 1vw;
+    height: 1vw;
+    margin-top: -21%;
+    margin-left: 75%;
+}
+#charts{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 5%;
+    margin-left: 30%;
+    font-family: letra2;
+    font-size: 1.2vw;
+    color: #101010;
+}
+#widgets{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 5%;
+    margin-left: 30%;
+    font-family: letra2;
+    font-size: 1.2vw;
+    color: #101010;
+}
+#table{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 12%;
+    margin-left: 13%;
+    font-family: letra2;
+    font-size: 1vw;
+    color: #787878;
+}
+#tables{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 12%;
+    margin-left: 30%;
+    font-family: letra2;
+    font-size: 1.2vw;
+    color: #101010;
+}
+#forms{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 12%;
+    margin-left: 30%;
+    font-family: letra2;
+    font-size: 1.2vw;
+    color: #101010;
 }
 #caja2{
-    width: 100vw;
-    height: 100vw;
-    background-color: yellow;
+    background-color: #fefefe;
+    width: 80vw;
+    height: 5vw;
+    margin-left: -80%;
+    margin-top: 2%;
+
+}
+#imagen{
+    width: 3vw;
+    height: 3vw;
+    margin-top: 1%;
+    margin-left: 93%;
+    border-radius: 50vw;
+}
+#caja3{
+    background-color: #eeedf2;
+    width: 80vw;
+    height: 41.6vw;
+    margin-top: -52%;
+    margin-left: 20%;
+}
+#dash{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 3%;
+    margin-left: 2.5%;
+    font-family: letra3;
+    font-size: 2.5vw;
+    color: black;
+}
+#home{
+    width: 10vw;
+    height: 2vw;
+    margin-top: 3%;
+    margin-left: 2.5%;
+    font-family: letra3;
+    font-size: 1.3vw;
+    color: #1f61c4;
+}
+#linea{
+    width: 10vw;
+    height: 2vw;
+    margin-top: -4.2%;
+    margin-left: 7%;
+    font-family: letra3;
+    font-size: 1.3vw;
+    color: #787878;
+}
+#dash1{
+    width: 10vw;
+    height: 2vw;
+    margin-top: -4%;
+    margin-left: 8%;
+    font-family: letra3;
+    font-size: 1.3vw;
+    color: #787878;
 }
