--- a/refuerzo/style.css
+++ b/refuerzo/style.css
@@ -794,7 +794,7 @@
 }
 #caja4{
     width: 100vw;
-    height: 40vw;
+    height: 39vw;
 }
 #frecuentes{
     position: absolute;
@@ -807,7 +807,7 @@
     align-items: center;
     font-family: letra1;
     color: black;
-    left: 19vw;
+    left: 25vw;
 }
 #iconoazul2{
     background-color: #3366cc;
@@ -815,7 +815,7 @@
     height: 2.5vw;
     border-radius: 10vw;
     margin-top: -1vw;
-    margin-left: 40vw;
+    margin-left: 45vw;
 }
 #uno{
     position: absolute;
@@ -828,5 +828,654 @@
     align-items: center;
     font-family: letra1;
     color: white;
+    left: 23.2vw;
+}
+#yo{
+    position: absolute;
+    top: 133vw;
+    width: 56vw;
+    height: 2vw;
+    font-size: 1.9vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
     left: 18.1vw;
+}
+#enla{
+    position: absolute;
+    top: 135.5vw;
+    width: 56vw;
+    height: 2vw;
+    font-size: 1.9vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 18.1vw;
+}
+#estamos{
+    position: absolute;
+    top: 138vw;
+    width: 47vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 23vw;
+}
+#si{
+    position: absolute;
+    top: 140vw;
+    width: 47vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 23vw;
+}
+#identi{
+    position: absolute;
+    top: 142vw;
+    width: 47vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 23vw;
+}
+#iconoazul3{
+    background-color: #3366cc;
+    width: 2.5vw;
+    height: 2.5vw;
+    border-radius: 10vw;
+    margin-top: 17vw;
+    margin-left: 45vw;
+}
+#dos{
+    position: absolute;
+    top: 148vw;
+    width: 47vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 23.2vw;
+}
+#porque{
+    position: absolute;
+    top: 153vw;
+    width: 100vw;
+    height: 2vw;
+    font-size: 1.9vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: -4vw;
+}
+#actu{
+    position: absolute;
+    top: 155vw;
+    width: 100vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: -4vw;
+}
+#encontro{
+    position: absolute;
+    top: 157vw;
+    width: 100vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: -4vw;
+}
+#iden{
+    position: absolute;
+    top: 159vw;
+    width: 100vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: -4vw;
+}
+#ver{
+    position: absolute;
+    top: 162vw;
+    width: 100vw;
+    height: 2vw;
+    font-size: 1.2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: -4vw;
+}
+#imagen11{
+    width: -2vw;
+    height: -2vw;
+    position: absolute;
+    display: flex;
+    left: 45.2vw;
+    top: 165vw;
+}
+#caja5{
+    width: 100vw;
+    height: 45vw;
+}
+#iconoazul4{
+    background-color: #3366cc;
+    width: 2.5vw;
+    height: 2.5vw;
+    border-radius: 10vw;
+    margin-top: 4vw;
+    margin-left: 44.4vw;
+}
+#tres{
+    position: absolute;
+    top: 171.8vw;
+    width: 47vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 22.5vw;
+}
+#debo{
+    position: absolute;
+    top: 177vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#usted{
+    position: absolute;
+    top: 179vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#enviado{
+    position: absolute;
+    top: 181vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#comu{
+    position: absolute;
+    top: 183vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#not{
+    position: absolute;
+    top: 185vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#dentro{
+    position: absolute;
+    top: 187vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#las{
+    position: absolute;
+    top: 189vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#iconoazul5{
+    background-color: #3366cc;
+    width: 2.5vw;
+    height: 2.5vw;
+    border-radius: 10vw;
+    margin-top: 20vw;
+    margin-left: 44.4vw;
+}
+#cuatro{
+    position: absolute;
+    top: 194vw;
+    width: 47vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 22.5vw;
+}
+#pagina{
+    position: absolute;
+    top: 199vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#me{
+    position: absolute;
+    top: 201vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#nombre1{
+    position: absolute;
+    top: 203vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#ciclo{
+    position: absolute;
+    top: 205vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#darles{
+    position: absolute;
+    top: 207vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#ver2{
+    position: absolute;
+    top: 210vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9vw;
+}
+#imagen12{
+    width: -2vw;
+    height: -2vw;
+    position: absolute;
+    display: flex;
+    left: 45.7vw;
+    top: 213vw;
+}
+#caja6{
+    width: 100vw;
+    height: 43vw;
+}
+#iconoazul6{
+    background-color: #3366cc;
+    width: 2.5vw;
+    height: 2.5vw;
+    border-radius: 10vw;
+    margin: 4vw;
+    margin-left: 44.4vw;
+}
+#cinco{
+    position: absolute;
+    top: 220.5vw;
+    width: 47vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 22.5vw;
+}
+#losque{
+    position: absolute;
+    top: 226vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 10vw;
+}
+#pros{
+    position: absolute;
+    top: 227vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 10vw;
+}
+#fuentes{
+    position: absolute;
+    top: 229vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 10vw;
+}
+#invi{
+    position: absolute;
+    top: 231vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 10vw;
+}
+#iconoazul7{
+    background-color: #3366cc;
+    width: 73vw;
+    height: 14vw;
+    border-radius: 5vw;
+    margin: 4vw;
+    margin-left: 10vw;
+    margin-top: 12vw;
+}
+#tiene{
+    position: absolute;
+    top: 238vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 10vw;
+}
+#dudes1{
+    position: absolute;
+    top: 240vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 10vw;
+}
+#iconoblanco{
+    background-color: white;
+    width: 9vw;
+    height: 3vw;
+    border-radius: 5vw;
+    margin: 4vw;
+    margin-left: 42vw;
+    margin-top: -8vw;
+}
+#conta{
+    position: absolute;
+    top: 245vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1.3vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: black;
+    left: 9.2vw;
+}
+#iconoazul8{
+    background-color: #3366cc;
+    width: 99vw;
+    height: 11vw;
+    margin: 4vw;
+    margin-left: -1vw;
+    margin-top: 8vw;
+}
+#imagen13{
+    width: 2vw;
+    height: 2vw;
+    position: absolute;
+    top: 258vw;
+    left: 10vw;
+}
+#social{
+    position: absolute;
+    top: 259vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: -27vw;
+}
+#ca{
+    position: absolute;
+    top: 260.5vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: -27vw; 
+}
+#co{
+    position: absolute;
+    top: 261.9vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: -27vw;
+}
+#hora{
+    position: absolute;
+    top: 263.4vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: -27vw;
+}
+#imagen14{
+    width: 15vw;
+    height: 5vw;
+    position: absolute;
+    top: 260vw;
+    left: 40vw;
+}
+#imagen15{
+    width: 2vw;
+    height: 2vw;
+    position: absolute;
+    top: 258vw;
+    left: 80vw;
+}
+#linea{
+    position: absolute;
+    top: 259vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 43vw;
+}
+#linea2{
+    position: absolute;
+    top: 260.5vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 43vw;
+}
+#conmu{
+    position: absolute;
+    top: 261.9vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 43vw;
+}
+#ingre{
+    position: absolute;
+    top: 263.4vw;
+    width: 75vw;
+    height: 2vw;
+    font-size: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: letra1;
+    color: white;
+    left: 43vw;
 }
