--- a/refuerzo/style.css
+++ b/refuerzo/style.css
@@ -13,8 +13,8 @@
 }
 #iconoazul{
     background-color: #3366cc;
-    position: absolute;
-    top: -0.55vw;
+    position: fixed;
+    top: -0.81vw;
     left: 0.4vw;
     width: 100vw;
     height: 5vw;
@@ -28,7 +28,7 @@
     height: 50vw;
 }
 #inicio{
-    position: absolute;
+    position: fixed;
     top: 2vw;
     width: 4vw;
     height: 2vw;
@@ -43,7 +43,7 @@
     z-index: 2;
 }
 #quees{
-    position: absolute;
+    position: fixed;
     top: 2vw;
     width: 35vw;
     height: 2vw;
@@ -62,12 +62,12 @@
     height: 3vw;
     top: 1.5vw;
     left: 35vw;
-    position: absolute;
+    position: fixed;
     display: flex;
     z-index: 2;
 }
 #entrega{
-    position: absolute;
+    position: fixed;
     top: 2vw;
     width: 6vw;
     height: 2vw;
@@ -88,9 +88,9 @@
     margin-right: 1.5%;
     border-radius: 1.5vw;
     text-decoration: none;
-    top: 1.5vw;
+    top: 1vw;
     left: 76vw;
-    position: absolute;
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
