--- a/REPASO DIA 3/style4.css
+++ b/REPASO DIA 3/style4.css
@@ -9,57 +9,40 @@ body{
     background-color: #fdfbfb;
     width: 45vw;
     height: 28vw;
-    margin: 4vw;
-    margin-left: 25vw;
-    margin-top: 8vw;
-    position: relative;
-    animation: iconoblanco 5s forwards;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     font-size: 2vw;
+    border: solid transparent;
+    margin: 0 auto;
 }
 #iconoblanco2{
     background-color: #fffffe;
     width: 12vw;
-    height: 13vw;
-    margin: 4vw;
-    margin-left: 42vw;
-    margin-top: -36vw;
+    height: 12vw;
     border-radius: 50vw;
-    display: fixed;
-    position: relative;
-    animation: iconoblanco2 5s forwards;
+    animation: iconoblanco2 2s forwards;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5vw auto;
+    margin-bottom: -8vw;
 }
 #imagen1{
     width: 10vw;
     height: 10vw;
-    margin-top: 1vw;
     margin-left: 0.5vw;
-    position: relative;
-    animation: imagen1 5s forwards;
 }
 #letra1{
     color: #f25768;
     font-family: letra1;
     font-size: 3.2vw;
-    width: 50vw;
-    position: absolute;
-    left: -13vw;
-    margin-top: -20vw;
-    position: relative;
+    margin-top: 10vw;
     animation: letra1 5s forwards;
 }
 #letra2{
     color: #918e8f;
     font-family: letra1;
     font-size: 1.8vw;
-    width: 90vw;
-    position: absolute;
-    left: -10vw;
     margin-top: -2.5vw;
-    position: relative;
     animation: letra2 5s forwards;
 }
 #letra3{
@@ -76,86 +59,24 @@ body{
 #cuadro{
     background-color: #2a99af;
     color: #fffffe;
-    width: 35vw;
-    height: 5vw;
-    margin: 4vw;
-    margin-left: -12vw;
-    margin-top: 3vw;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+    width:22vw;
+    margin: 2vw auto;
+    padding: 0.6vw;
     font-family: letra1;
     font-size: 2vw;
     transition: background-color 0.3s ease;
-    position: relative;
-    animation: subirYSaltar 5s forwards;
 }
 #cuadro:hover {
     background-color: #f3596b;
 }
-@keyframes subirYSaltar {
-    0% {
-        top: 50vh; 
-    }
-    85% {
-        top: 15vh; 
-    }
-    100% {
-        top: 20vh; 
-    }
-}
-@keyframes iconoblanco{
-    0% {
-        top: 50vh; 
-    }
-    85% {
-        top: 15vh; 
-    }
-    100% {
-        top: 20vh; 
-    }
-}
 @keyframes iconoblanco2{
-    0% {
-        top: 50vh; 
+    0%{
+        margin-top: 50vw;
     }
-    85% {
-        top: 15vh; 
+    90%{
+        margin-top: 0vw;
     }
-    100% {
-        top: 20vh; 
-    }
-}
-@keyframes letra1{
-    0% {
-        top: 50vh; 
-    }
-    85% {
-        top: 15vh; 
-    }
-    100% {
-        top: 20vh; 
-    }
-}
-@keyframes letra2{
-    0% {
-        top: 50vh; 
-    }
-    85% {
-        top: 15vh; 
-    }
-    100% {
-        top: 20vh; 
-    }
-}
-@keyframes letra3{
-    0% {
-        top: 50vh; 
-    }
-    85% {
-        top: 15vh; 
-    }
-    100% {
-        top: 20vh; 
+    95%{
+        margin-top: 7vw;
     }
 }
